--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -9,3 +9,17 @@
 #london{
     background-color: pink;
 } */
+
+span{
+    padding: 0 5px;
+    border-top: 2px solid black;
+    border-bottom: 4px solid grey;
+}
+
+p{
+    border-style: ridge;
+    border-color: lightgreen;
+    border-width: 10px;
+
+    margin: 5px
+}
